ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dremio-ingress-route
  namespace: data-lakehouse
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dremio.192.168.1.10.sslip.io`) 
      kind: Rule
      services:
        - name: dremio # Make sure to use the correct service name
          port: 9047  # Should match the service's exposed port
